--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-preset-mantine": "^1.18.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
@@ -63,9 +64,11 @@
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "postcss-simple-vars": "^7.0.1",
+    "sass-embedded": "^1.97.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^3.2.0"
   }
 }
