--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.536.0",
     "postcss-preset-mantine": "^1.18.0",
     "react": "^19.1.1",
