--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@mantine/carousel": "^7.17.8",
     "@mantine/core": "^7.17.3",
     "@mantine/dates": "^7.16.0",
     "@mantine/form": "^7.17.3",
