--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mantine/nprogress": "^7.17.0",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "lucide-react": "^0.536.0",
