--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
     "zod": "^4.3.6",
+    "socket.io-client": "^4.8.3",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
